--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "mixitup": "^3.3.1",
     "node": "^12.22.12",
     "sass": "^1.62.1"
+  },
+  "dependencies": {
+    "slick-carousel": "^1.8.1"
   }
 }
