--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "gulp-sass": "^5.1.0",
     "gulp-svg-sprite": "^2.0.3",
     "gulp-uglify": "^3.0.2",
+    "ion-rangeslider": "^2.3.1",
     "jquery": "^3.7.0",
     "mixitup": "^3.3.1",
     "node": "^12.22.12",
     "sass": "^1.62.1"
   },
   "dependencies": {
+    "jquery-form-styler": "^2.0.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.0.4"
   }
