--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "gulp-uglify": "^3.0.2",
     "ion-rangeslider": "^2.3.1",
     "jquery": "^3.7.0",
+    "magnific-popup": "^1.1.0",
     "mixitup": "^3.3.1",
     "node": "^12.22.12",
+    "rateyo": "^2.3.2",
     "sass": "^1.62.1"
   },
   "dependencies": {
